# SAFRAN_demo

./: Makefile  README.md
REDEFINE_project/: README.md
REDEFINE_project/cpp_code/: CMakeLists.txt  SAT_fc.cpp  SAT_fc.hpp  algos.cpp  algos.hpp  main.cpp
REDEFINE_project/cpp_code/cmake/: CMakeCache.txt  FindGMP.cmake  Makefile  cmake_install.cmake
REDEFINE_project/cpp_code/cmake/minisat/: Makefile
REDEFINE_project/cpp_code/cmake/minisatp/: Makefile  cmake_install.cmake
REDEFINE_project/cpp_code/cmake/utils/: Makefile  cmake_install.cmake
REDEFINE_project/cpp_code/minisat/: CMakeLists.txt
REDEFINE_project/cpp_code/minisatp/: CMakeLists.txt  Main.cc  PbSolver.cc  PbSolver.h
REDEFINE_project/cpp_code/utils/: CMakeLists.txt  Matrix.cpp  Matrix.hpp  allocation.hpp  create_func.cpp  create_func.hpp  get_func.cpp  get_func.hpp
REDEFINE_project/matlab_code/: ILP.m  ILP_sat.m  algoFlexible.m  createGeomConst.m  createGraph.m  createLinkMap.m  createNoC.m  getAllLinks.m  getAllNodes.m  getToMove.m  getTrueNodes.m  main.m  op_writer.txt  opb_writer_init.m  readInput.m  readSATresult.m
RPI_1/: Makefile  PhidgetHelperFunctions.c  PhidgetHelperFunctions.h  RPI_1  RPI_1.c  RPI_PWM  RPI_PWM.c  RPI_SENSOR  RPI_SENSOR.c  RPI_SENSOR_PWM  RPI_SENSOR_PWM.c  RPI_UDP  RPI_UDP.c  pwm.txt  sensor.txt  sensor_PWM.txt
RPI_1/Motor_PWM_Test/: sensor_PWM_1380.txt  sensor_PWM_1390.txt  sensor_PWM_1400.txt  sensor_PWM_1410.txt  sensor_PWM_1420.txt  sensor_PWM_1430.txt  sensor_PWM_1440.txt  sensor_PWM_1450.txt  sensor_PWM_1460.txt  sensor_PWM_1470.txt  sensor_PWM_1480.txt  sensor_PWM_1490.txt  sensor_PWM_1500.txt  sensor_PWM_1510.txt  sensor_PWM_1520.txt  sensor_PWM_1530.txt  sensor_PWM_1540.txt  sensor_PWM_1550.txt  sensor_PWM_1560.txt  sensor_PWM_1570.txt  sensor_PWM_1580.txt  sensor_PWM_1590.txt  sensor_PWM_1600.txt  sensor_PWM_1610.txt  sensor_PWM_1620.txt  sensor_PWM_1630.txt  sensor_PWM_1640.txt  sensor_PWM_1650.txt  sensor_PWM_1660.txt  sensor_PWM_1670.txt  sensor_PWM_1680.txt  sensor_PWM_1690.txt  sensor_PWM_1700.txt  sensor_PWM_1710.txt  sensor_PWM_1720.txt  sensor_PWM_1730.txt  sensor_PWM_1740.txt  sensor_PWM_1750.txt  sensor_PWM_1760.txt  sensor_PWM_1770.txt  (+1 more)
RPI_1/Sensor_Calibration/: sensor_100g.txt  sensor_200g.txt  sensor_500g.txt
RPI_2/: Makefile  RPI_2  RPI_2.c  thrust_measure.txt
RPI_3/: Makefile  RPI_3  RPI_3.c
UDP/: udp-recv  udp-send  udp-send.c
UDP_RPi1/: udp-recv  udp-send
VoltageRatioInput/VoltageRatioInput_Example/: Makefile  VoltageRatioInputExample  VoltageRatioInput_Example.c  VoltageRatioInput_Example.sln  VoltageRatioInput_Example.vcxproj
full_demo/: BLUE_LED.py  BLUE_LED_Louis.py  GET_IP.py  GHOST_LED.py  GREEN_LED.py  OFF_LED.py  Push_Button_GPIO.py  RED_LED.py  RGB_GPIO.py  SAT_result.txt  String_Array.py  YELLOW_LED.py  algo_input.txt  allocation_mapping.txt  allocator  empty.py  execute_another_script.py  execute_another_script2.py  execute_another_script3.py  faults.txt  hello.py  node.py  resource_manager.py  rpi_node.py  rpi_node_1.py  rpi_node_old.py  sat_pblm.opb  text1.txt
pwm/: Makefile  pwm  pwm.c
